# ast-doc

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  SKILL.md  context7.json
crates/ast-doc-core/: Cargo.toml  README.md
crates/ast-doc-core/proptest-regressions/parser/lang/: generic_parser.txt
crates/ast-doc-core/proptest-regressions/scheduler/: optimizer.txt
crates/ast-doc-core/src/: config.rs  error.rs  lib.rs
crates/ast-doc-core/src/ingestion/: git.rs  mod.rs  walker.rs
crates/ast-doc-core/src/parser/: mod.rs  strategy.rs
crates/ast-doc-core/src/parser/lang/: c_parser.rs  generic_parser.rs  go_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  typescript_parser.rs
crates/ast-doc-core/src/renderer/: llms_txt.rs  mod.rs
crates/ast-doc-core/src/scheduler/: mod.rs  optimizer.rs
crates/ast-doc-core/tests/: bdd.rs
docs/: design.md
features/: ast-doc.feature
skills/: ast-doc.md
specs/2026-03-26-01-ast-doc-pipeline/: design.md  tasks.md
