[package]
name = "ast-doc-core"
version.workspace = true
edition.workspace = true
description = "Core library for ast-doc: four-stage pipeline for generating optimized llms.txt documentation"

[features]
all-languages = [
    "lang-rust",
    "lang-python",
    "lang-typescript",
    "lang-go",
    "lang-c",
]
default = ["lang-rust"]
lang-c = ["tree-sitter-c"]
lang-go = ["tree-sitter-go"]
lang-python = ["tree-sitter-python"]
lang-rust = ["tree-sitter-rust"]
lang-typescript = ["tree-sitter-typescript"]

[dependencies]
eyre = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
termtree = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
cucumber = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false
