[package]
name = "ast-doc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for ast-doc: four-stage pipeline for generating optimized llms.txt documentation"
readme = "README.md"

[features]
all-languages = [
    "lang-rust",
    "lang-python",
    "lang-typescript",
    "lang-go",
    "lang-c",
    "lang-pack",
]
default = ["lang-rust", "lang-pack"]
hotpath = ["dep:hotpath"]
lang-c = ["tree-sitter-c"]
lang-go = ["tree-sitter-go"]
lang-pack = ["tree-sitter-language-pack"]
lang-python = ["tree-sitter-python"]
lang-rust = ["tree-sitter-rust"]
lang-typescript = ["tree-sitter-typescript"]

[dependencies]
eyre = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
hotpath = { workspace = true, optional = true }
ignore = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
termtree = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-language-pack = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
ctor = "0.2"
cucumber = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false
